feat(): Started AssetRepository, bump V2.2.0